layout issue solved

--- a/src/Components/Store/store.scss
+++ b/src/Components/Store/store.scss
@@ -57,7 +57,7 @@
             
             .products-page{
                 display: grid;
-                width: 70%;
+                width: 80%;
                 grid-template-columns: 1fr 1fr 1fr 1fr;
                 justify-content: center;
                 gap: 4px 20px;
